added postgre dependency

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
         </maven.checkstyle.plugin.configLocation>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.18</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
