--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -4,12 +4,22 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
     <servlet>
-        <servlet-name>index</servlet-name>
+        <servlet-name>taxi-service</servlet-name>
         <servlet-class>core.controller.IndexController</servlet-class>
     </servlet>
     
     <servlet-mapping>
-        <servlet-name>index</servlet-name>
-        <url-pattern>/index</url-pattern>
+        <servlet-name>taxi-service</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>addDriver</servlet-name>
+        <servlet-class>core.controller.AddDriverController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>addDriver</servlet-name>
+        <url-pattern>/add/driver</url-pattern>
     </servlet-mapping>
 </web-app>
