--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -21,7 +21,7 @@
 
     <servlet-mapping>
         <servlet-name>addDriver</servlet-name>
-        <url-pattern>/driver/add</url-pattern>
+        <url-pattern>/drivers/add</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -31,7 +31,7 @@
 
     <servlet-mapping>
         <servlet-name>deleteDriver</servlet-name>
-        <url-pattern>/driver/delete</url-pattern>
+        <url-pattern>/drivers/delete</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -41,7 +41,7 @@
 
     <servlet-mapping>
         <servlet-name>getAllDrivers</servlet-name>
-        <url-pattern>/driver/all</url-pattern>
+        <url-pattern>/drivers</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -51,7 +51,7 @@
 
     <servlet-mapping>
         <servlet-name>getAllManufacturers</servlet-name>
-        <url-pattern>/manufacturer/all</url-pattern>
+        <url-pattern>/manufacturers</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -61,7 +61,7 @@
 
     <servlet-mapping>
         <servlet-name>addManufacturer</servlet-name>
-        <url-pattern>/manufacturer/add</url-pattern>
+        <url-pattern>/manufacturers/add</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -71,7 +71,7 @@
 
     <servlet-mapping>
         <servlet-name>deleteManufacturer</servlet-name>
-        <url-pattern>/manufacturer/delete</url-pattern>
+        <url-pattern>/manufacturers/delete</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -81,7 +81,7 @@
 
     <servlet-mapping>
         <servlet-name>addCar</servlet-name>
-        <url-pattern>/car/add</url-pattern>
+        <url-pattern>/cars/add</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -91,7 +91,7 @@
 
     <servlet-mapping>
         <servlet-name>getAllCars</servlet-name>
-        <url-pattern>/car/all</url-pattern>
+        <url-pattern>/cars</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -101,7 +101,7 @@
 
     <servlet-mapping>
         <servlet-name>addDriverToCar</servlet-name>
-        <url-pattern>/car/add/driver</url-pattern>
+        <url-pattern>/cars/drivers/add</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -111,7 +111,7 @@
 
     <servlet-mapping>
         <servlet-name>showCarDrivers</servlet-name>
-        <url-pattern>/car/drivers</url-pattern>
+        <url-pattern>/cars/drivers</url-pattern>
     </servlet-mapping>
 
     <servlet>
@@ -121,7 +121,7 @@
 
     <servlet-mapping>
         <servlet-name>deleteCar</servlet-name>
-        <url-pattern>/car/delete</url-pattern>
+        <url-pattern>/cars/delete</url-pattern>
     </servlet-mapping>
 
 </web-app>
