--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -134,4 +134,14 @@
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>authenticationFilter</filter-name>
+        <filter-class>core.web.filters.AuthenticationFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>authenticationFilter</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
+
 </web-app>
