--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -115,6 +115,16 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>getMyCurrentCars</servlet-name>
+        <servlet-class>core.controller.car.GetMyCurrentCarsController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>getMyCurrentCars</servlet-name>
+        <url-pattern>/drivers/cars</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>deleteCar</servlet-name>
         <servlet-class>core.controller.car.DeleteCarController</servlet-class>
     </servlet>
