--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -151,7 +151,7 @@
 
     <filter-mapping>
         <filter-name>authenticationFilter</filter-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 
 </web-app>
